<?xml version="1.0"?>
<package format="2">
  <name>capra_signal_strength</name>
  <version>0.0.0</version>
  <description>The capra_signal_strength package</description>

  <maintainer email="capra@ens.etsmtl.ca">Marc-Olivier Champagne</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rtabmap_ros</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  
</package>